--- a/about.html
+++ b/about.html
@@ -4,18 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us - ADO Security & Protection Services</title>
+  <link rel="icon" href="images/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+    .mobile-menu { display: none; }
+    @media (max-width: 767px) {
+      .mobile-menu { display: block; }
+      .desktop-menu { display: none; }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col">
-
- <!-- Navbar -->
-   <header class="bg-white shadow-md sticky top-0 z-50">
-   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-  <div class="flex items-center space-x-3">
-    <img src="images/ADO_Logo.png" alt="ADO Logo" class="h-10 w-10 object-contain" />
-    <h1 class="text-3xl font-bold text-blue-700">ADO SECURITY & PROTECTION SERVICES</h1>
-  </div>
-      <nav>
+<body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col">
+  <!-- Navbar -->
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <img src="images/ADO_Logo.png" alt="ADO Security & Protection Services Logo" class="h-10 w-10 object-contain" />
+        <span class="text-lg sm:text-xl md:text-3xl font-bold text-blue-700 leading-tight">
+          ADO SECURITY &<br class="block sm:hidden"/> PROTECTION SERVICES
+        </span>
+      </div>
+      <!-- Desktop Nav -->
+      <nav class="desktop-menu">
         <ul class="flex space-x-6">
           <li><a href="index.html" class="hover:text-blue-700">Home</a></li>
           <li><a href="about.html" class="text-blue-700 border-b-2 border-blue-700 pb-1 font-semibold">About</a></li>
@@ -24,44 +36,97 @@
           <li><a href="contact.html" class="hover:text-blue-700">Contact</a></li>
         </ul>
       </nav>
+      <!-- Hamburger for mobile -->
+      <button id="menu-btn" class="mobile-menu relative z-50 block md:hidden focus:outline-none" aria-label="Toggle navigation">
+        <svg class="w-7 h-7 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+      <!-- Mobile Nav Dropdown -->
+      <nav id="mobile-nav" class="mobile-menu absolute right-4 top-20 bg-white shadow-lg rounded-lg w-44 py-2 transition-all duration-200 ease-in-out scale-0 opacity-0 pointer-events-none">
+        <ul class="flex flex-col space-y-1 text-base">
+          <li><a href="index.html" class="block px-4 py-2 hover:text-blue-700">Home</a></li>
+          <li><a href="about.html" class="block px-4 py-2 text-blue-700 font-semibold">About</a></li>
+          <li><a href="services.html" class="block px-4 py-2 hover:text-blue-700">Services</a></li>
+          <li><a href="gallery.html" class="block px-4 py-2 hover:text-blue-700">Gallery & Clients</a></li>
+          <li><a href="contact.html" class="block px-4 py-2 hover:text-blue-700">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
-<main class="flex-grow">
-  <!-- About Section -->
-  <section class="py-16 px-4 md:px-8 lg:px-16 bg-white shadow-sm">
-    <div class="max-w-5xl mx-auto">
-      <h2 class="text-3xl md:text-4xl font-bold text-center text-blue-700 mb-8">About ADO Security & Protection Services</h2>
-      <p class="text-lg leading-relaxed mb-6">
-        Established in 1985 in Mumbai, <strong>ADO Security & Protection Services</strong> has grown to become one of the region’s most trusted and professional security agencies.</p>
-      <p class="text-lg leading-relaxed mb-6"> With decades of experience, we proudly provide end-to-end security solutions across residential complexes, industrial premises, factories, showrooms, and corporate 
-        spaces — not just in Mumbai, but also across Gujarat and other states.</p>
-      <p class="text-lg leading-relaxed mb-6"> At ADO, we believe that security is not just about presence — it's about preparedness. Every member of our security staff is rigorously 
-        trained, verified, and disciplined to handle real-world challenges with professionalism and confidence.</p>
-      <p class="text-lg leading-relaxed mb-6"> Our commitment to trust, reliability, and quick response has earned us the confidence of clients from all sectors — residential 
-      societies, industrial hubs, and even event organizers.</p>
-      <p class="text-lg leading-relaxed mb-10">
-        Our mission is to deliver peace of mind through our professional team of watchmen,bouncers, and patrolling officers. 
-      </p>
+  <main class="flex-grow">
+    <!-- About Section -->
+    <section class="py-10 px-4 sm:px-6 md:px-8 lg:px-16">
+      <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-md p-6 sm:p-10">
+        <h2 class="text-2xl xs:text-3xl md:text-4xl font-bold text-center text-blue-700 mb-8">
+          About ADO Security & Protection Services
+        </h2>
+        <p class="text-base sm:text-lg leading-relaxed mb-5">
+          Established in 1985 in Mumbai, <strong class="font-semibold text-blue-700">ADO Security & Protection Services</strong> has grown to become one of the region’s most trusted and professional security agencies.
+        </p>
+        <p class="text-base sm:text-lg leading-relaxed mb-5">
+          With decades of experience, we proudly provide end-to-end security solutions across residential complexes, industrial premises, factories, showrooms, and corporate spaces—not just in Mumbai, but also across Gujarat and other states.
+        </p>
+        <p class="text-base sm:text-lg leading-relaxed mb-5">
+          At ADO, we believe that security is not just about presence—it's about preparedness. Every member of our security staff is rigorously trained, verified, and disciplined to handle real-world challenges with professionalism and confidence.
+        </p>
+        <p class="text-base sm:text-lg leading-relaxed mb-5">
+          Our commitment to trust, reliability, and quick response has earned us the confidence of clients from all sectors—residential societies, industrial hubs, and even event organizers.
+        </p>
+        <p class="text-base sm:text-lg leading-relaxed mb-8">
+          Our mission is to deliver peace of mind through our professional team of watchmen, bouncers, and patrolling officers.
+        </p>
 
-      <h3 class="text-2xl font-semibold text-blue-700 mb-4">Why Choose Us?</h3>
-      <ul class="space-y-3 text-lg list-disc list-inside text-gray-700">
-        <li><span class="font-medium">Experienced & Licensed Security Staff</span></li>
-        <li><span class="font-medium">24x7 Availability for Events & Emergencies</span></li>
-        <li><span class="font-medium">Affordable, Transparent Pricing</span></li>
-        <li><span class="font-medium">Trusted by Residential Societies, Corporates & Celebrities</span></li>
-      </ul>
-    </div>
-  </section>
-</main>
+        <h3 class="text-xl sm:text-2xl font-semibold text-blue-700 mb-4 mt-2">Why Choose Us?</h3>
+        <ul class="space-y-3 text-base sm:text-lg pl-4 text-gray-700">
+          <li class="flex items-start">
+            <span class="text-blue-700 mr-2 mt-0.5">&#10003;</span>
+            <span><span class="font-medium">Experienced & Licensed Security Staff</span></span>
+          </li>
+          <li class="flex items-start">
+            <span class="text-blue-700 mr-2 mt-0.5">&#10003;</span>
+            <span><span class="font-medium">24x7 Availability for Events & Emergencies</span></span>
+          </li>
+          <li class="flex items-start">
+            <span class="text-blue-700 mr-2 mt-0.5">&#10003;</span>
+            <span><span class="font-medium">Affordable, Transparent Pricing</span></span>
+          </li>
+          <li class="flex items-start">
+            <span class="text-blue-700 mr-2 mt-0.5">&#10003;</span>
+            <span><span class="font-medium">Trusted by Residential Societies, Corporates & Celebrities</span></span>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Mobile Nav Script -->
+    <script>
+      // Mobile nav handling
+      const menuBtn = document.getElementById('menu-btn');
+      const mobileNav = document.getElementById('mobile-nav');
+      if(menuBtn && mobileNav){
+        menuBtn.addEventListener('click', () => {
+          if (mobileNav.classList.contains('scale-0')) {
+            mobileNav.classList.remove('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.add('scale-100','opacity-100');
+          } else {
+            mobileNav.classList.add('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.remove('scale-100','opacity-100');
+          }
+        });
+        document.querySelectorAll('#mobile-nav a').forEach(link =>
+          link.addEventListener('click', () => menuBtn.click())
+        );
+      }
+    </script>
+  </main>
   <!-- Footer -->
-  <footer class="bg-blue-700 text-white py-6">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-sm">
+  <footer class="bg-blue-700 text-white py-6 mt-6">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-xs sm:text-sm">
       <div>&copy; 2025 ADO Security & Protection Services</div>
       <div class="mt-2 md:mt-0">
         <a href="contact.html" class="hover:underline">Contact</a>
       </div>
     </div>
   </footer>
-
 </body>
 </html>
