--- a/services.html
+++ b/services.html
@@ -4,19 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Our Services - ADO Security & Protection Services</title>
+  <link rel="icon" href="images/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+    .mobile-menu { display: none; }
+    @media (max-width: 767px) {
+      .mobile-menu { display: block; }
+      .desktop-menu { display: none; }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col">
-
+<body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col">
   <!-- Navbar -->
   <header class="bg-white shadow-md sticky top-0 z-50">
-   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-  <div class="flex items-center space-x-3">
-    <img src="images/ADO_Logo.png" alt="ADO Logo" class="h-10 w-10 object-contain" />
-    <h1 class="text-3xl font-bold text-blue-700">ADO SECURITY & PROTECTION SERVICES</h1>
-  </div>
-      <nav>
-        <ul class="flex space-x-6">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <img src="images/ADO_Logo.png" alt="ADO Logo - ADO Security & Protection Services" class="h-10 w-10 object-contain" />
+        <span class="text-lg sm:text-xl md:text-3xl font-bold text-blue-700 leading-tight">
+          ADO SECURITY &<br class="block sm:hidden"/> PROTECTION SERVICES
+        </span>
+      </div>
+      <!-- Desktop Nav -->
+      <nav class="desktop-menu">
+        <ul class="flex space-x-5 xs:space-x-6">
           <li><a href="index.html" class="hover:text-blue-700">Home</a></li>
           <li><a href="about.html" class="hover:text-blue-700">About</a></li>
           <li><a href="services.html" class="text-blue-700 font-semibold border-b-2 border-blue-700 pb-1">Services</a></li>
@@ -24,66 +36,92 @@
           <li><a href="contact.html" class="hover:text-blue-700">Contact</a></li>
         </ul>
       </nav>
+      <!-- Hamburger for mobile -->
+      <button id="menu-btn" class="mobile-menu relative z-50 block md:hidden focus:outline-none" aria-label="Toggle navigation">
+        <svg class="w-7 h-7 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+      <!-- Mobile Nav Dropdown -->
+      <nav id="mobile-nav" class="mobile-menu absolute right-4 top-20 bg-white shadow-lg rounded-lg w-44 py-2 transition-all duration-200 ease-in-out scale-0 opacity-0 pointer-events-none">
+        <ul class="flex flex-col space-y-1 text-base">
+          <li><a href="index.html" class="block px-4 py-2 hover:text-blue-700">Home</a></li>
+          <li><a href="about.html" class="block px-4 py-2 hover:text-blue-700">About</a></li>
+          <li><a href="services.html" class="block px-4 py-2 text-blue-700 font-semibold">Services</a></li>
+          <li><a href="gallery.html" class="block px-4 py-2 hover:text-blue-700">Gallery & Clients</a></li>
+          <li><a href="contact.html" class="block px-4 py-2 hover:text-blue-700">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
-<main class="flex-grow">
-  <!-- Services Section -->
-  <section class="py-16 px-4 md:px-8 lg:px-16 bg-white shadow-sm">
-  <div class="max-w-6xl mx-auto">
-    <h2 class="text-3xl md:text-4xl font-bold text-center text-blue-700 mb-12">Our Services</h2>
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-      
-      <!-- Service Card 1 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/img5.jpeg" alt="Watchman" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Security Services</h3>
-        <p>Trained and alert personnel to guard residential and commercial buildings 24/7.</p>
+  <main class="flex-grow">
+    <!-- Services Section -->
+    <section class="py-8 sm:py-12 px-2 xs:px-4 sm:px-6 md:px-8 lg:px-16">
+      <div class="max-w-6xl mx-auto">
+        <h2 class="text-2xl xs:text-3xl md:text-4xl font-bold text-center text-blue-700 mb-8 md:mb-12">Our Services</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 md:gap-8">
+          <!-- Card 1 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img5.jpeg" alt="Professional watchman on duty" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Security Services</h3>
+            <p class="text-sm sm:text-base">Trained and alert personnel to guard residential and commercial buildings 24/7.</p>
+          </div>
+          <!-- Card 2 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img2.jpeg" alt="Event Security Team" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Event Security</h3>
+            <p class="text-sm sm:text-base">Reliable bouncers and security staff for parties, weddings, corporate, and public events.</p>
+          </div>
+          <!-- Card 3 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img6.jpeg" alt="Experienced bodyguard in suit" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Bodyguard Services</h3>
+            <p class="text-sm sm:text-base">Professional bodyguards for VIPs, celebrities, executives, and personal security.</p>
+          </div>
+          <!-- Card 4 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img7.jpeg" alt="Smartly dressed commercial security guard" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Commercial Security Service</h3>
+            <p class="text-sm sm:text-base">Smartly dressed, trained staff for office buildings, banks, and IT parks.</p>
+          </div>
+          <!-- Card 5 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img8.jpeg" alt="Hotel security staff at reception" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Hotel Security</h3>
+            <p class="text-sm sm:text-base">Security personnel trained in hospitality behavior and guest safety.</p>
+          </div>
+          <!-- Card 6 -->
+          <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition text-center flex flex-col items-center">
+            <img src="images/img5.jpeg" alt="Night patrol with torch" class="w-full h-40 object-cover rounded-md mb-4" />
+            <h3 class="text-lg sm:text-xl font-semibold text-blue-600 mb-2">Night Patrolling</h3>
+            <p class="text-sm sm:text-base">Mobile security teams for society rounds and off-hours business safety.</p>
+          </div>
+        </div>
       </div>
-
-      <!-- Service Card 2 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/img2.jpeg" alt="Event Security" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Event Security</h3>
-        <p>Reliable bouncers and security staff for parties, weddings, corporate, and public events.</p>
-      </div>
-
-      <!-- Service Card 3 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/hero-bg.png" alt="Bodyguard" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Bodyguard Services</h3>
-        <p>Professional bodyguards for VIPs, celebrities, executives, and personal security.</p>
-      </div>
-
-      <!-- Service Card 4 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/ado-guard-enhanced.png" alt="Commercial Security" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Commercial Security Service</h3>
-        <p>Smartly dressed, trained staff for office buildings, banks, and IT parks.</p>
-      </div>
-
-      <!-- Service Card 5 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/security1.png" alt="Hotel Security" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Hotel Security</h3>
-        <p>Security personnel trained in hospitality behavior and guest safety.</p>
-      </div>
-
-      <!-- Service Card 6 -->
-      <div class="bg-gray-50 p-6 rounded-xl shadow hover:shadow-md transition text-center">
-        <img src="images/security2.png" alt="Night Patrol" class="w-full h-40 object-cover rounded-md mb-4" />
-        <h3 class="text-xl font-semibold text-blue-600 mb-2">Night Patrolling</h3>
-        <p>Mobile security teams for society rounds and off-hours business safety.</p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-</main>
+    </section>
+    <!-- Mobile nav JS -->
+    <script>
+      const menuBtn = document.getElementById('menu-btn');
+      const mobileNav = document.getElementById('mobile-nav');
+      if(menuBtn && mobileNav){
+        menuBtn.addEventListener('click', () => {
+          if (mobileNav.classList.contains('scale-0')) {
+            mobileNav.classList.remove('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.add('scale-100','opacity-100');
+          } else {
+            mobileNav.classList.add('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.remove('scale-100','opacity-100');
+          }
+        });
+        document.querySelectorAll('#mobile-nav a').forEach(link =>
+          link.addEventListener('click', () => menuBtn.click())
+        );
+      }
+    </script>
+  </main>
   <!-- Footer -->
-  <footer class="bg-blue-700 text-white py-6">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-sm">
+  <footer class="bg-blue-700 text-white py-6 mt-6">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-xs sm:text-sm">
       <div>&copy; 2025 ADO Security & Protection Services</div>
       <div class="mt-2 md:mt-0">
         <a href="contact.html" class="hover:underline">Contact</a>
